--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -76,3 +76,13 @@ main {
     width: 85%;
     display: flex;
 }
+
+#tasks {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 20px;
+}
