--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,4 @@
-body, html, h1, h2 {
+body, html, h1, h2, p {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
@@ -49,7 +49,7 @@ aside {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    background-color: red;
+    background-color: burlywood;
 }
 
 ul {
@@ -75,14 +75,94 @@ main {
     height: 100%;
     width: 85%;
     display: flex;
+    padding: 15px 15px 0px 15px;
+    align-items: space-between;
+    justify-content: space-between;
+    flex-direction: column;
 }
 
 #tasks {
     width: 100%;
-    height: 100%;
+    height: 70%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    padding: 20px;
+    background-color: grey;
+    padding: 0px 20px 20px 20px;
+    gap: 5px;
+    margin: 0 0 30px 0;
+}
+
+#menuTasks {
+    width: 100%;
+    height: 10%;
+    min-height: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: lightblue;
+    padding: 20px 20px 20px 20px;
+    border-radius: 20px;
+    margin-bottom: 10px;
+}
+
+.task {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+    height: auto;
+    gap: 15px;
+    padding: 0 25px 0 25px;
+    border-radius: 20px;
+    border: 1px solid lightblue;
+    background-color: burlywood;
+}
+
+.task input[type="checkbox"] {
+    /* Remove os estilos padrão */
+    -webkit-appearance: none; /* Para navegadores baseados em WebKit */
+    -moz-appearance: none; /* Para navegadores Firefox */
+    appearance: none;
+    
+    /* Personalização */
+    width: 15px;
+    min-width: 15px;
+    height: 15px;
+    border: 2px solid #333;
+    border-radius: 50%; /* Torna as bordas arredondadas */
+    cursor: pointer;
+    outline: none;
+
+    /* Cor de fundo */
+    background-color: #fff;
+
+    /* Estilo ao passar o mouse */
+    transition: background-color 0.2s, border-color 0.2s;
+}
+
+.task input[type="checkbox"]:checked {
+    background-color: #4caf50; /* Cor de fundo ao marcar */
+    border-color: #4caf50; /* Cor da borda ao marcar */
+}
+
+.task input[type="checkbox"]:checked + p {
+    text-decoration: line-through; /* Riscar o texto ao marcar */
+    color: gray; /* Opcional: Mudar a cor para indicar a tarefa concluída */
+}
+
+.task input[type="checkbox"]:hover {
+    border-color: #555;
+}
+
+#tasks .task p {
+    width: 100%;
+    padding: 10px 0;
+}
+
+#completeTasks {
+    width: 100%;
+    height: 30%;
+    background-color: lightblue;
 }
