--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -18,6 +18,7 @@ body, html, h1, h2, p {
 /* Cabeçalho */
 header {
     height: 7%;
+    min-height: 7%;
     background-color: #333;
     display: flex;
     align-items: center;
