--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -84,7 +84,8 @@ main {
 
 #tasks {
     width: 100%;
-    height: 70%;
+    height: auto;
+    min-height: 70%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -164,6 +165,7 @@ main {
 
 #completeTasks {
     width: 100%;
-    height: 30%;
+    height: auto;
+    min-height: 30%;
     background-color: lightblue;
 }
