--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,7 @@
 body,
 html,
 h1,
-h2,
-p {
+h2 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
@@ -33,6 +32,15 @@ header {
     align-items: center;
     justify-content: space-between;
     padding: 10px 20px;
+}
+
+#dateContainer {
+    display: flex;
+    align-items: baseline;
+    justify-content: flex-start;
+    width: auto;
+    height: auto;
+    gap: 5px;
 }
 
 #logoutBtn {
@@ -112,7 +120,6 @@ main {
     background-color: lightblue;
     padding: 20px;
     border-radius: 20px;
-    margin-bottom: 20px;;
 }
 
 #addTask h1 {
