--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,8 @@
 body,
 html,
 h1,
-h2 {
+h2,
+p {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
@@ -41,12 +42,6 @@ header {
     width: auto;
     height: auto;
     gap: 5px;
-}
-
-#logoutBtn {
-    background-color: transparent;
-    border: none;
-    border-radius: 50px;
 }
 
 #logoutBtn:hover {
@@ -153,6 +148,7 @@ main {
 
 .task:hover {
     background-color: #f0f0f0;
+    cursor: pointer;
 }
 
 .task input[type="checkbox"] {
@@ -205,6 +201,10 @@ main {
     outline: none;
     border: none;
     background-color: transparent;
+}
+
+.taskInput:hover {
+    cursor: pointer;
 }
 
 .iconBtn {
