--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,7 +6,7 @@ p {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     padding: 0;
-    color: #fff;
+    color: #E0E0E0;
 }
 
 * {
@@ -22,13 +22,14 @@ button {
     width: 100vw;
     height: 100dvh;
     overflow: hidden;
+    background-color: #1E1E1E;
 }
 
 /* Cabeçalho */
 header {
     height: 7%;
     min-height: 7%;
-    background-color: #333;
+    background-color: #2A2A2A;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -45,7 +46,7 @@ header {
 }
 
 #logoutBtn:hover {
-    background-color: #555555;;
+    background-color: #555555;
 }
 
 /* Corpo */
@@ -62,7 +63,7 @@ aside {
     align-items: center;
     justify-content: center;
     padding: 10px 10px 0px 10px;
-    background-color: cadetblue;
+    background-color: #242424;
 }
 
 #menu {
@@ -72,7 +73,7 @@ aside {
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    background-color: burlywood;
+    background-color: #2A2A2A;
 }
 
 ul {
@@ -91,7 +92,7 @@ i {
 
 a {
     text-decoration: none;
-    color: black;
+    color: #E0E0E0;
 }
 
 main {
@@ -102,7 +103,7 @@ main {
     flex-direction: column;
     overflow: auto;
     gap: 10px;
-    background-color: grey;
+    background-color: #2E2E2E;
 }
 
 #menuTasks {
@@ -112,13 +113,13 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: lightblue;
+    background-color: #3A3A3A;
     padding: 20px;
     border-radius: 20px;
 }
 
 #addTask h1 {
-    color: #333;
+    color: #E0E0E0;
 }
 
 #tasks {
@@ -128,7 +129,7 @@ main {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    background-color: lightblue;
+    background-color: #2E2E2E;
     padding: 0 20px;
     gap: 5px;
 }
@@ -142,12 +143,12 @@ main {
     gap: 15px;
     padding: 0 25px 0 25px;
     border-radius: 20px;
-    border: 1px solid lightblue;
-    background-color: burlywood;
+    border: none;
+    background-color: #3A3A3A;
 }
 
 .task:hover {
-    background-color: #f0f0f0;
+    background-color: #4F4F4F;
     cursor: pointer;
 }
 
@@ -163,21 +164,21 @@ main {
     width: 15px;
     min-width: 15px;
     height: 15px;
-    border: 2px solid #333;
+    border: 2px solid #E0E0E0;
     border-radius: 50%;
     /* Torna as bordas arredondadas */
     cursor: pointer;
     outline: none;
 
     /* Cor de fundo */
-    background-color: #fff;
+    background-color: #1E1E1E;
 
     /* Estilo ao passar o mouse */
-    transition: background-color 0.2s, border-color 0.2s;
+    transition: background-color 0.2s, border-color 0.2s, transform 0.2s;
 }
 
 .task input[type="checkbox"]:checked {
-    background-color: #4caf50;
+    background-color: #4CAF50;
     /* Cor de fundo ao marcar */
     border-color: #4caf50;
     /* Cor da borda ao marcar */
@@ -186,12 +187,13 @@ main {
 .task input[type="checkbox"]:checked+input {
     text-decoration: line-through;
     /* Riscar o texto ao marcar */
-    color: gray;
+    color: #B0B0B0;
     /* Opcional: Mudar a cor para indicar a tarefa concluída */
 }
 
 .task input[type="checkbox"]:hover {
-    border-color: #555;
+    border-color: #B0B0B0;
+    transform: scale(1.2);
 }
 
 #taskInput,
@@ -201,6 +203,7 @@ main {
     outline: none;
     border: none;
     background-color: transparent;
+    color: #E0E0E0;
 }
 
 .taskInput:hover {
@@ -213,7 +216,7 @@ main {
     border-radius: 50px;
 }
 .iconBtn:hover {
-    background-color: #808080;
+    background-color: #555555;
 }
 
 hr {
@@ -221,7 +224,7 @@ hr {
     /* Remove bordas padrão */
     height: 2px;
     /* Define altura visível */
-    background-color: #ccc;
+    background-color: #555555;
     /* Escolha uma cor visível */
     margin: 2px 0;
     /* Adicione espaçamento */
@@ -237,7 +240,7 @@ hr {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: lightblue;
+    background-color: #3A3A3A;
     padding: 15px;
     border-radius: 20px;
 }
@@ -249,7 +252,7 @@ hr {
 #completeTasks {
     width: 100%;
     height: auto;
-    background-color: lightblue;
+    background-color: #2E2E2E;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
