--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -55,6 +55,34 @@ header {
     background-color: #333333;
 }
 
+.tooltipBtn {
+    position: relative;
+}
+
+.tooltipText {
+    visibility: hidden;
+    width: 120px;
+    background-color: #333333;
+    color: #F0F0F0;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    top: 100%;
+    left: 50%;
+    margin-left: -60px;
+    margin-top: 5px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.tooltipBtn:hover .tooltipText {
+    visibility: visible;
+    opacity: 1;
+    transition-delay: 1s; /* Tempo de espera antes de exibir (0.5s = meio segundo) */
+}
+
 /* Corpo */
 #botScreen {
     width: 100%;
